# bipedal_wheel

./: LICENSE
bipedal_wheel_common/: CMakeLists.txt  package.xml
bipedal_wheel_common/include/bipedal_wheel_common/: filter.h  lqr.h
bipedal_wheel_controller/: CMakeLists.txt  bipedal_wheel_controller_plugin.xml  package.xml
bipedal_wheel_controller/config/: controllers.yaml
bipedal_wheel_controller/include/bipedal_wheel_controller/: controller.h  definitions.h  helper_functions.h
bipedal_wheel_controller/include/bipedal_wheel_controller/controller_mode/: mode_base.h  mode_manager.h  normal.h  recover.h  sit_down.h  stand_up.h
bipedal_wheel_controller/launch/: load_controllers.launch
bipedal_wheel_controller/src/: controller.cpp
bipedal_wheel_controller/src/controller_mode/: mode_base.cpp  mode_manager.cpp  normal.cpp  recover.cpp  sit_down.cpp  stand_up.cpp
bipedal_wheel_controller/src/dynamics/: gen_A.c  gen_B.c
bipedal_wheel_controller/src/vmc/: leg_conv.c  leg_conv_fwd.c  leg_pos.c  leg_spd.c
bipedal_wheel_description/: CMakeLists.txt  package.xml
bipedal_wheel_description/launch/: empty_world.launch
bipedal_wheel_description/meshes/: first_leg.stl  second_leg.stl  wheel.stl
bipedal_wheel_description/urdf/: bipedal.urdf.xacro  chassis.urdf.xacro  imu.urdf.xacro  leg.transmission.xacro  leg.urdf.xacro
bipedal_wheel_gazebo/: CMakeLists.txt  bipedal_hw_sim_plugin.xml  package.xml
bipedal_wheel_gazebo/include/bipedal_wheel_gazebo/: bipedal_hw_sim.h
bipedal_wheel_gazebo/launch/: empty_world.launch
bipedal_wheel_gazebo/src/: bipedal_hw_sim.cpp
