<?xml version="1.0"?>
<package format="2">
    <name>bipedal_wheel_common</name>
    <version>0.0.0</version>
    <description>The bidepal_wheel_common package</description>

    <maintainer email="guanlin@todo.todo">guanlin</maintainer>

    <license>TODO</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <depend>eigen</depend>

    <export>

    </export>

</package>
